ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2012/07/11 - jgonzale - Other

	CHANGES:	'configure.ac.' moved to 'configure.ac.template' to keep
				track of the versioning easily.

2012/07/11 - jgonzale - trf2dim

	BUGFIX:		Offsets generation adapted to new trace format.

2012/07/11 - jgonzale - Other

	CHANGES:	Full integration of the simulator, GUI and translators in
				a single package to ease the tool distribution and maintenance.

	CHANGES:	Commit tagged as Version 4 of the tool, considering stability
				of the stability of HOPSA integration.

2012/07/05 - jgonzale - GUI
	
	CHANGES:	Deep modification of 'DimemasGUI' to correctly generate new
				CFGs files (using new block codification). It is still
				under validation.

2012/03/27 - jgonzale - prv2dim

	FEATURES:	changed 'iprobe' translation to indicate the iprobe threshold
				in a miliseconds 'rate' instead of absolute values

2012/03/23 - jgonzale - prv2dim

	BUGFIX:		solved a wrong header creation when less file descriptors than
				tasks to translate were available.
				
	CHANGES:	better distinction of wrong communication primitives inside
				wrong block (FEATURE of 2012/03/22). 

2012/03/22 - grodrigu - Simulator
	
	BUGFIX:		Solved a bug on parsing: when reading NOOPs offset location
				was not updated properly.

2012/03/22 - jgonzale - prv2dim

	FEATURES:	SVN numbering using 'configure.ac.template' and a modification
				on 'autogen.sh' that uses 'svnversion' application.

	FEATURES:	Added a check when communication primitives inside a MPI
				block does not correspond to the expected (for example a send
				primitive inside MPI_recv). A warning message is thrown.

				That solves a miss-translation bug discovered in Dalton
				caused by the time granularity of the Paraver trace.
