@@ -1,0 +1,23 @@
+#!/bin/sh
+#export DIMEMAS_HOME=
+export DIMEMAS_GUI_JAR=$DIMEMAS_HOME/bin/@@JARFILE@@
+
+if [ -z $DIMEMAS_HOME ] ; then
+	echo "Please set DIMEMAS_HOME to the Dimemas installation root directory"
+	exit 1
+elif ! [ -e $DIMEMAS_GUI_JAR ]; then
+	echo "Dimemas GUI 'jar' file (@@JARFILE@@) not found in the"
+	echo "$DIMEMAS_HOME/bin directory. Please check the installation"
+	exit 1
+fi
+
+if  which java >/dev/null 2>&1  ; then
+    JAVA_BIN=`which java`
+else
+    echo "No Java Runtime found on your path."
+    echo "Please check the JRE installation"
+    exit 1
+fi
+
+
+$JAVA_BIN -jar -DDIMEMAS_HOME=$DIMEMAS_HOME $DIMEMAS_GUI_JAR >/dev/null
