@@ -10,6 +10,12 @@ Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)
 
 	CHANGES:  	explanation of codification changes
 
+2012/07/12 - jgonzale - GUI
+
+	CHANGES:	GUI script is now called 'DimemasGUI'. It is installation
+				agnostic, and performs better checks for user-environment
+				variables and JRE installation.
+
 2012/07/11 - jgonzale - Other
 
 	CHANGES:	'configure.ac.' moved to 'configure.ac.template' to keep
